# psk31_client_workspace

./: .gitignore  CLAUDE.md  LICENSE  MANUAL_TEST_PLAN.md  Makefile  PLAN.md  PLAN_COVERAGE.md  PLAN_MENU.md  PLAN_PHASE1_5_REFACTOR.md  PLAN_PHASE2_SERIAL.md  PLAN_PHASE3_AUDIO.md  PLAN_PHASE4_TX.md  PLAN_PHASE5_RX.md  PLAN_PHASE9_CAT.md  PLAN_RADIO_SUPPORT.md  README.md  REVIEW.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: coverage.yml  release.yml  snapshot-update.yml
docs/references/: psk31-references.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs  state.rs
src-tauri/src/adapters/: cpal_audio.rs  ft991a.rs  mock_radio.rs  mod.rs  serial_port.rs
src-tauri/src/cat/: decode.rs  encode.rs  mod.rs  session.rs
src-tauri/src/commands/: audio.rs  config.rs  mod.rs  radio.rs  serial.rs  status.rs  tx.rs
src-tauri/src/domain/: config.rs  error.rs  mod.rs  types.rs
src-tauri/src/dsp/: agc.rs  clock_recovery.rs  costas_loop.rs  fft.rs  filter.rs  mod.rs  nco.rs  raised_cosine.rs
src-tauri/src/modem/: decoder.rs  encoder.rs  mod.rs  pipeline.rs  varicode.rs
src-tauri/src/ports/: audio.rs  mod.rs  radio.rs  serial.rs
src-tauri/tests/: cat_integration.rs  rx_loopback.rs
src/components/: audio-panel.ts  control-panel.ts  rx-display.ts  serial-panel.ts  settings-dialog.ts  status-bar.ts  theme-toggle.ts  toast.ts  tx-input.ts  waterfall-controls.ts  waterfall.ts
src/services/: app-state.ts  audio-bridge.ts  backend-api.ts  event-handlers.ts  rx-bridge.ts  (+2 more)
(+10 files in other folders)
