[package]
name = "baudacious"
version = "0.1.0"
description = "PSK-31 ham radio keyboard-to-keyboard communication"
authors = ["nerdenator industries"]
edition = "2021"
license = "MIT"

[lib]
name = "baudacious_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio I/O
cpal = "0.15"

# Serial port / CAT control
serialport = "4"

# DSP
rustfft = "6"
num-complex = "0.4"

# Concurrency
crossbeam-channel = "0.5"
ringbuf = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
